# pumpfoilysis

./: .gitignore  README.md  main.py  pyproject.toml
docs/: gps.md
src/: schemas.py
src/pumpfoilysis/: categorize.py  parse.py  refine.py  schemas.py
tests/: cut_activity.tcx  helpers.py  test_categorize.py  test_helpers.py  test_parse.py  test_refine.py
tests/samples/: consecutive_gps_gaps.csv
