[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pumpfoilysis"
version = "0.1.0"
description = "Clean and Analyse Pumpfoil Activity Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.33.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
]