[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pumpfoilysis"
version = "0.1.0"
description = "Clean and Analyse Pumpfoil Activity Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",          # required for plotly.express 
  "plotly>=6.3.0",
  "polars>=1.33.1",
]

[project.optional-dependencies]
test = ["pytest>=8.2.2"]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
